<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{e7e50caa-0e93-438c-b1b4-45ba3504a240}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	HusetsElfoerbrukning: ARRAY[0..23] OF HusetsElfoerbrukning;
	
	
	
	//Från EON
	ElOeverfoeringsAvgiftEonKWh: 	REAL:= 0.2645;			// Mars 2023
	EnergiskattKWh: 				REAL:= 0.49;			// Mars 2023
	MomsKWh:		 				REAL:= 0.1886;
	
	NaetNyttaKWh:   REAL:= 0.1663;							// Mars 2023
	
	//Från Kraftringen
	PaaslagMinusRabattKWh: REAL:= 0.009;						// Jan 2023
	//Moms tillkommer också men räknas på spotpriset
	
	//Från Staten
	SkatteAvdragKWh:	REAL:= 0.60;
	
END_VAR

VAR_GLOBAL PERSISTENT
	timData: ARRAY[0..87600] OF ST_timData;   
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>