<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="BraAttHa" Id="{de115610-19ec-4aec-809c-058bd69aa67c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK BraAttHa
VAR_INPUT
	timData: REFERENCE TO ARRAY[0..87600] OF ST_timData;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	eWriteState: (FILE_OPEN_TRIGGER,FILE_OPEN, WAIT_FOR_EVENT, WRITE_EVENT_TRIGGER,WRITE_EVENT, FILE_CLOSE_TRIGGER, FILE_CLOSE, ERROR); //används i CASE istället för siffror
	timestruct             : TIMESTRUCT;    
	fbMeRingBuffer: FB_MemRingBuffer;   //Ringbuffert
	
	//Hämta lokal tid
	   bInit           : BOOL;
    nTime           : UINT;
    tBufferTime     : TIME;
    dtBufferDT      : DT;
    nCalcBuffer     : UDINT;
    sMs             : STRING;
    sLogTime        : STRING;
    sLogTimeWithMs  : STRING;
    stSystemTime    : TIMESTRUCT;
    fbLocalTime     : FB_LocalSystemTime;
	bTestRef1: BOOL;
	nisse: BOOL;
	
	arraydata: ARRAY[0..9] OF ST_elpriserTimme;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//Hämta lokal tid
	fbLocalTime(bEnable := TRUE);
	  dtBufferDT := SYSTEMTIME_TO_DT(fbLocalTime.systemTime);fbLocalTime(bEnable := TRUE);
IF NOT bInit
THEN
    dtBufferDT := SYSTEMTIME_TO_DT(fbLocalTime.systemTime);
    IF fbLocalTime.bValid 
    THEN
        bInit := TRUE;
    END_IF
ELSE
    nTime := nTime + 1;
    tBufferTime := UINT_TO_TIME(nTime*10);
    IF tBufferTime = T#1S
    THEN
        //Add a second to your system time
        ntime := 0;
        nCalcBuffer := DT_TO_UDINT(dtBufferDT)+1;
        dtBufferDT := UDINT_TO_DT(nCalcBuffer);
        sLogTime := DT_TO_STRING(dtBufferDT);
        sLogTimeWithMs := sLogTime;
    ELSE
        //Add ms string time-stamp
        sMs := TIME_TO_STRING(tBufferTime);
        sLogTimeWithMs := CONCAT(sLogTime,sMs);
    END_IF
END_IF

//Kolla om en REFERENCE-variabel är VALID. Är den inte det så kolla om den är med i anropet av FB:t
		bTestRef1  := __ISVALIDREF(timData);
		
		
		IF nisse THEN
	MEMCPY(ADR(arraydata[0]),ADR(arraydata[1]), SIZEOF(arraydata[1])); //Kopiera en hel strukt på en gång. 
 
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>